mica-modules/mica/includes/facet-visibility.css
@CHARSET "UTF-8";

#mica-facet-visibility-form {
  padding-top: 5px;
}

#mica-facet-visibility-form #edit-block .fieldset-wrapper {
  max-height: 250px;
  overflow-y: auto;
}

#mica-facet-visibility-form #edit-block {
  padding: 0;
  margin-bottom: 5px;
  margin-top: 0;
}

#mica-facet-visibility-form #edit-block .form-item {
  padding-left: 5px;
  padding-right: 5px;
  margin-top: 2px;
  margin-bottom: 2px;
}

#mica-facet-visibility-form #edit-submit {
  margin-bottom: 5px;
}

